<?xml version="1.0"?>
<package format="2">
  <name>serow_ros</name>
  <version>0.0.0</version>
  <description>The serow_ros package</description>

  <maintainer email="stpiperakis@gmail.com">Stylianos Piperakis</maintainer>

  <license>GNU General Public License</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>pinocchio</depend>

</package>
